# ZeroFS

./: .dockerignore  BTRFS_SNAPSHOTS_GUIDE.md  CLONE_TEST_SUMMARY.md  CONTENT_ADDRESSABLE_STORAGE_PROPOSAL.md  DOCKER_BUILD_SUMMARY.md  Dockerfile  Dockerfile.latest  Dockerfile.local  Dockerfile.multiarch  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PROPOSAL.md  INSTANT_RESTORE.md  INSTANT_RESTORE_COMPLETE.md  ISCSI_ANALYSIS.md  LARGE_FILE_TEST_RESULTS.md  NBD_CLI_USAGE.md  NBD_NFS_EXPORT_GUIDE.md  QUICK_START_NBD_CLI.md  README.md  RESTORE_IMPLEMENTATION_STATUS.md  REST_API_DOCUMENTATION.md  SESSION_SUMMARY.md  SIMPLE_CLONE_DESIGN.md  SNAPSHOTS_COMPLETE.md  SNAPSHOT_FIX_COMPLETE.md  SNAPSHOT_IMPLEMENTATION_STATUS.md  SNAPSHOT_LISTING_IMPROVEMENT.md  SNAPSHOT_NFS_ACCESS.md  SNAPSHOT_RESTORE_ARCHITECTURE.md  SNAPSHOT_SUBVOLUME_IMPLEMENTATION.md  SNAPSHOT_TEST_COMPLETE.md  TEST_RESULTS.md  comprehensive_test.sh  demo-instant-restore.sh  test-restore.txt  test_clone.sh  test_snapshots.sh
.github/workflows/: README.md  bench.yml.disabled  cross-compile.yml.disabled  docker.yml  release-pgo.yml.disabled  release.yml  rust.yml  test-action-minio.yml.disabled
documentation/src/app/configuration/: page.mdx
documentation/src/app/standalone-compactor/: page.mdx
documentation/src/components/: Navigation.tsx
zerofs/: Cargo.toml
zerofs/proto/: admin.proto
zerofs/src/: config.rs  control.rs  encryption.rs  failpoints.rs  http.rs  key_management.rs  lib.rs  main.rs  metadata_cache.rs  nfs.rs  posix_tests.rs  task.rs  writeback_cache.rs
zerofs/src/cli/: compactor.rs  dataset.rs  debug.rs  mod.rs  nbd.rs  password.rs  server.rs  subvolume.rs
zerofs/src/fs/: clone.rs  constants.rs  dataset.rs  flush_coordinator.rs  gc.rs  inode.rs  key_codec.rs  lock_manager.rs  metrics.rs  mod.rs  snapshot_manager.rs  snapshot_vfs.rs  stats.rs  subvolume.rs  write_coordinator.rs
zerofs/src/fs/store/: chunk.rs  dataset.rs  directory.rs  inode.rs  mod.rs  subvolume.rs
zerofs/src/fs/writeback_cache/: flusher.rs  mod.rs  wal.rs
zerofs/src/rpc/: client.rs  convert.rs  server.rs
zerofs/tests/failpoints/: consistency.rs  mod.rs
